# Experimental-Snippets

./: README.txt  new.cpp
BigInteger/: CMakeLists.txt
BigInteger/src/: main.cc
Format/: CMakeLists.txt  main.cc
HashTable/: CMakeLists.txt  main.cc
LConf/: CMakeLists.txt
LConf/include/: INode.h  lconf.h  lconf_detail.hpp  node.h  scalar_node.h  table_node.h
LConf/src/: lconf.cc  scalar_node.cc  table_node.cc  test.cc
LConf/testdata/: 1.conf
LogFiles/: CMakeLists.txt  build.sh
LogFiles/examples/: CMakeLists.txt  main.cc
LogFiles/include/: log_cfile.h  log_fd_file.h  log_file.h
LogFiles/src/: log_cfile.cc  log_fd_file.cc  log_file.cc
ProcessBus/: CMakeLists.txt  admin.sh
ProcessBus/include/: process_bus.h  ring_buffer.h
ProcessBus/src/: client.cc  process_bus.cc  ring_buffer.cc
Processors/: CMakeLists.txt
Processors/include/: add_processor.h  minus_processor.h  processor.h  processor_mgr.h
Processors/src/: add_processor.cc  client.cc  minus_processor.cc  processor_mgr.cc  server.cc
Reflection/: CMakeLists.txt
Reflection/include/: Base.hpp  Base_reflection.hpp  reflection.hpp
Reflection/test/: CMakeLists.txt  main.cc  test_reflection.cc
RegionBasedAllocator/: Align.h  Allocator.cc  Allocator.h  CMakeLists.txt  Event.h  FreeList.cc  FreeList.h  LinkedList.cc  LinkedList.h  Page.cc  Page.h  PageAllocator.cc  PageAllocator.h  PageHeap.cc  PageHeap.h  main.cc
RegionBasedContainer/: RegionBasedAllocator-inl.h  RegionBasedAllocator.h  RegionBasedHashTable-inl.h  RegionBasedHashTable.h  RegionBasedHelper.h  RegionBasedVector-inl.h  RegionBasedVector.h
RemoteClangFormat/: clang-format-client.py  clang-format-server.py  clang-format-server.sh
Singleton/: CMakeLists.txt  Makefile
Singleton/include/: Base.h  Base2.h  singleton.hpp  singleton_details.hpp
Singleton/src/: Base.cc  Base2.cc  main.cc
benchmark/: CMakeLists.txt
benchmark/examples/: CMakeLists.txt  main.cc  userinfo.proto
benchmark/include/: benchmark.h
benchmark/src/: benchmark.cc
coroutine/: CMakeLists.txt
coroutine/examples/: CMakeLists.txt  main.cc
coroutine/include/: coroutine.h
coroutine/src/: coroutine.cc
cxxtolua/data/: Makefile  cxxtolua_helper.hpp  do_generation.sh  dynamic_array.cc  dynamic_array.h  main.cc  main.cc.orig  output.cc  run.lua  userdata_wrapper.h
cxxtolua/template/: check_primitive_type_template.c  check_real.cc  check_scalar_argument.cc  check_signed_integer.cc  check_string.cc  check_string_type_template.c  check_unsigned_integer.cc  check_userdata.cc  check_userdata_argument.cc  check_userdata_template.c  class_init_code.cc  export_library.cc  function.c  function_body.c  generate_constructor_result.c  generate_primitive_result.c  generate_ptr_userdata_result.c  generate_ref_userdata_result.c  generate_string_result_from_c_string.c  generate_string_result_from_std_string.c  generate_userdata_result.c  scope_init_code.cc
fx/: CMakeLists.txt
fx/include/: map.hpp
fx/src/: main.cc
logger/: CMakeLists.txt  build.sh
logger/include/: async_logger.h  fixed_size_buffer.hpp  log_file.h  log_formatter.h  log_mmap_file.h  log_stream.h  log_streambuf.h  logger.h  logger.hpp  sync_logger.h  sync_logging.h
logger/src/: async_logger.cc  log_file.cc  log_formatter.cc  log_mmap_file.cc  log_stream.cc  log_streambuf.cc  logger.cc  main.cc  sync_logger.cc  sync_logging.cc
logsvrd/: CMakeLists.txt  build.sh
logsvrd/conf/: logsvrd.xml
logsvrd/include/: logsvrd.h
logsvrd/src/: logsvrd.cc  main.cc
lua_aio/: CMakeLists.txt
lua_aio/ideas/: test.lua
lua_aio/include/: l_aio.h  l_aio_aux.h  l_array.h  laio_def.h  slist.h
lua_aio/src/: l_aio.c  l_aio_aux.c  l_array.c  laio.c  laio_def.c  slist.c  test.c
lua_aio/test/: run.lua  test.lua  test_aio.lua
pb_parser/: CMakeLists.txt  admin.sh
pb_parser/example/: CMakeLists.txt  main.cc
pb_parser/include/: compact_protobuf.h  protobuf_encoder.h  protobuf_helper.h  protobuf_parser.h
pb_parser/src/: compact_protobuf.cc  main.cc  protobuf_encoder.cc  protobuf_helper.cc  protobuf_parser.cc
pb_parser/tests/: CMakeLists.txt  unittest_environment.cc  unittest_message.cc
pb_parser/tests/data/: TestPacked.desc  TestPacked.pb.cc  TestPacked.pb.h  TestPacked.proto  make_proto.sh
rbtree/: CMakeLists.txt  main.cc  rbtree.hpp
src/: BigInteger.hpp
test-protobuf-reflection/: .ycm_extra_conf.py  CMakeLists.txt
test-protobuf-reflection/include/: exchange_gifts.h  exchange_gifts_detail.hpp  exchange_gifts_info.pb.h  exchange_gifts_info_mgr.h
test-protobuf-reflection/proto/: exchange_gifts_info.pb.cc  exchange_gifts_info.proto  userinfo.pb.cc  userinfo.pb.h  userinfo.proto
test-protobuf-reflection/src/: exchange_gifts.cc  exchange_gifts_info_mgr.cc
test-protobuf-reflection/test/: CMakeLists.txt  test.cc
test-ptree/: CMakeLists.txt
test-ptree/conf/: exchange_gifts.xml
test-ptree/test/: CMakeLists.txt  test.cc
test_zmq/: CMakeLists.txt  main.cc
tries/trie/: CMakeLists.txt  main.cc
udpserver/pytools/: udp_receiver.py  udp_sender.py
udpserver/src/: .ycm_extra_conf.py  CMakeLists.txt
udpserver/src/base/: CMakeLists.txt  list.h  memory_list.cc  memory_list.h  mmap_file.cc  mmap_file.h  rbtree.h  system_time.cc  system_time.h  vector.h
udpserver/src/base/tests/: CMakeLists.txt  list_unittest.cc  memory_list_unittest.cc  rbtree_unittest.cc
udpserver/src/net/: CMakeLists.txt  channel.cc  channel.h  event_loop.cc  event_loop.h  poller.cc  poller.h  udp_listener.cc  udp_listener.h  udp_server.cc  udp_server.h
udpserver/src/server/: CMakeLists.txt  arena_conf.cc  arena_conf.h  arena_message.pb.cc  arena_message.pb.h  arena_message.proto  arena_server.cc  arena_server.h  main.cc
udpserver/src/server/conf/: arenasvrd.conf
