cmake_minimum_required(VERSION 2.6)
PROJECT( POCOTEST )
set(CMAKE_CXX_COMPILER "clang++") 
SET( DIR_OUTPUT output )
#set( CMAKE_BUILD_TYPE "release" )
file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${DIR_OUTPUT})
SET( BIN_NAME ${DIR_OUTPUT}/test )
INCLUDE_DIRECTORIES( include )

#FIND_LIBRARY(POCO_FOUNDATION PocoFoundation)
#FIND_LIBRARY(POCO_NET PocoNet)
#FIND_LIBRARY(POCO_DATA PocoData)
#FIND_LIBRARY(POCO_UTIL PocoUtil)
#FIND_LIBRARY(LOG4CPP log4cpp)
#FIND_LIBRARY(PTHREAD pthread )

AUX_SOURCE_DIRECTORY( src DIR_SRCS )
ADD_EXECUTABLE( ${BIN_NAME} ${DIR_SRCS} )
#TARGET_LINK_LIBRARIES( ${BIN_NAME} ${POCO_FOUNDATION} ${POCO_NET} ${POCO_DATA}
#    ${POCO_UTIL} ${LOG4CPP} )
