cmake_minimum_required(VERSION 2.6)
project(prototype)
set(EXE "main")
set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Werror -Wno-unused-variable -Wno-unused-parameter")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
set(CMAKE_CXX_FLAGS_DEBUG "-ggdb")
string(TOLOWER "${CMAKE_BUILD_TYPE}" lower_build_type)
set(PRECOMPILED_HEADER_PATH "${PROJECT_BINARY_DIR}/precompiled")
file(MAKE_DIRECTORY ${PRECOMPILED_HEADER_PATH})
if (lower_build_type STREQUAL "debug") 
    set(PRECOMPILED_HEADER "${PRECOMPILED_HEADER_PATH}/stdc++-debug.h.pch")
    separate_arguments(FLAGS UNIX_COMMAND "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_DEBUG}")
elseif (lower_build_type STREQUAL "release")
    set(PRECOMPILED_HEADER "${PRECOMPILED_HEADER_PATH}/stdc++-release.h.pch")
    separate_arguments(FLAGS UNIX_COMMAND "${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE}")
else()
    set(PRECOMPILED_HEADER "${PRECOMPILED_HEADER_PATH}/stdc++.h.pch")
    separate_arguments(FLAGS UNIX_COMMAND ${CMAKE_CXX_FLAGS})
endif()
list(APPEND SRCS "main.cc")
find_path(STDC++-HEADER-PATH "stdc++.h" PATHS "/usr/include/c++/4.9.2/${CMAKE_SYSTEM_PROCESSOR}-redhat-linux/bits")
set(STDC++HEADER "${STDC++-HEADER-PATH}/stdc++.h")
set(PRECOMPILED_TARGET precompiled_header)
add_custom_target(${PRECOMPILED_TARGET}
    test -e ${PRECOMPILED_HEADER} || clang++ ${FLAGS} -x c++-header ${STDC++HEADER} -o ${PRECOMPILED_HEADER})
find_library(GLOG "glog")
add_executable(${EXE} ${SRCS})
set_target_properties(${EXE} PROPERTIES COMPILE_FLAGS "-include-pch ${PRECOMPILED_HEADER}")
target_link_libraries(${EXE} ${GLOG})
add_dependencies(${EXE} ${PRECOMPILED_TARGET})
