CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( processor )

SET(CMAKE_C_COMPILER "ccache-clang")
SET(CMAKE_CXX_COMPILER "ccache-clang++")

SET(LIBSO "processor")
SET(SERVER "server")
SET(CLIENT "client")
SET(CMAKE_FIND_LIBRARY_PREFIXES "lib")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")

INCLUDE_DIRECTORIES(/opt/include)
INCLUDE_DIRECTORIES(include)

FIND_LIBRARY(ZMQ "zmq")
FIND_LIBRARY(PTHREAD "pthread")
FIND_LIBRARY(DL "dl")
FIND_LIBRARY(GLOG "glog")
FIND_PACKAGE(Boost COMPONENTS REQUIRED system thread)
LIST(APPEND LIB_SRC_LIST src/add_processor.cc src/processor_mgr.cc)
LIST(APPEND SERVER_SRC_LIST src/server.cc)
LIST(APPEND CLIENT_SRC_LIST src/client.cc)

IF(MINUS)
    ADD_DEFINITIONS(-DENABLE_MINUS) 
    LIST(APPEND LIB_SRC_LIST src/minus_processor.cc)
ENDIF()

ADD_LIBRARY( ${LIBSO} SHARED ${LIB_SRC_LIST} )

ADD_EXECUTABLE( ${SERVER} ${SERVER_SRC_LIST} )
TARGET_LINK_LIBRARIES( ${SERVER} ${ZMQ} ${PTHREAD} ${DL} ${GLOG} ${Boost_LIBRARIES})

ADD_EXECUTABLE( ${CLIENT} ${CLIENT_SRC_LIST} )
TARGET_LINK_LIBRARIES( ${CLIENT} ${ZMQ} ${PTHREAD} ${GLOG} ${Boost_LIBRARIES})
