CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( singleton )

SET(CMAKE_FIND_LIBRARY_PREFIXES "lib")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")
SET(APP "run")

INCLUDE_DIRECTORIES(include)
FIND_LIBRARY(PTHREAD "pthread")

LIST(APPEND APP_SRC_LIST src/Base.cc src/Base2.cc src/main.cc)

ADD_EXECUTABLE( ${APP} ${APP_SRC_LIST} )
TARGET_LINK_LIBRARIES( ${APP} ${PTHREAD} )
