CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( lua_aio )

SET( CMAKE_C_COMPILER "clang" )

SET(LIB "laio")
SET(LIBSO "laio")
SET(APP "run")
SET(CMAKE_FIND_LIBRARY_PREFIXES "lib")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")

INCLUDE_DIRECTORIES(/opt/include)
INCLUDE_DIRECTORIES(include)

FIND_LIBRARY(LUA "lua")
FIND_LIBRARY(RT "rt")
LIST(APPEND LIB_SRC_LIST src/)
LIST(APPEND APP_SRC_LIST src/test.c)

#ADD_LIBRARY( ${LIBSO} SHARED ${LIB_SRC_LIST} )

ADD_EXECUTABLE( ${APP} ${APP_SRC_LIST} )
TARGET_LINK_LIBRARIES( ${APP} ${LUA} ${RT} )
