CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT( lua_aio )

SET( CMAKE_C_COMPILER "clang" )
SET(CMAKE_C_FLAGS "-Wall -Werror -Wno-unused-function -Wno-unused-variable -ggdb" )

SET(LIBSO "laio")
SET(APP "run")
SET(CMAKE_FIND_LIBRARY_PREFIXES "lib")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so" ".a")

INCLUDE_DIRECTORIES(include)

FIND_LIBRARY(LUA "lua")
FIND_LIBRARY(RT "rt")
LIST(APPEND LIB_SRC_LIST src/laio.c)

ADD_LIBRARY( ${LIBSO} SHARED ${LIB_SRC_LIST} )
TARGET_LINK_LIBRARIES( ${LIBSO} ${RT} )
